# ls

./: LICENSE  README.md
android_porthole/: settings.gradle.kts
android_porthole/app/: build.gradle.kts
android_porthole/app/src/androidTest/java/com/ls/porthole/: ExampleInstrumentedTest.kt
android_porthole/app/src/main/: AndroidManifest.xml
android_porthole/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android_porthole/app/src/main/java/com/ls/porthole/: MainActivity.kt
android_porthole/app/src/main/res/values/: strings.xml  themes.xml
android_porthole/app/src/main/res/values-night/: themes.xml
android_porthole/app/src/test/java/com/ls/porthole/: ExampleUnitTest.kt
android_porthole/gradle/wrapper/: gradle-wrapper.properties
ls_vm/: CMakeLists.txt
ls_vm/include/: ls_vm  ls_vm.h
ls_vm/src/: ls_vm.cpp  ls_vm.h  types.h
ls_vm/src/vm/: constants.h  mtx.cpp  mtx.h  processor.cpp  processor.h  queue.h  sandbox.cpp  sandbox.h  transport.h  types.h  worker.cpp  worker.h  worker_node.cpp  worker_node.h
pc_porthole/: CMakeLists.txt  readme.md
pc_porthole/src/: interfaces.h  main.cpp
pc_porthole/src/interfaces/: i-view-port.h
pc_porthole/src/system/: system.cpp  system.h
pc_porthole/src/system/view-port/opengl460/: opengl460.cpp  opengl460.h  simple-object-3d.cpp  simple-object-3d.h  simple-shader-3d.cpp  simple-shader-3d.h
